--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Back</div>
+        <img src="https://i.imgur.com/rmwETry.jpg?1" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Front Side</div>
+        <img src="https://i.imgur.com/dpVj4RT.jpg?1" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Side</div>
+        <img src="https://i.imgur.com/1kBW9Tj.jpg?1" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
