--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <img class="w3-image" src="https://i.imgur.com/MjJPHmc.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
-    <p>We aren't the only one, but we are the best!</p>
+    <p class="w3-hide-small w3-text-light-grey" >We aren't the only one, but we are the best!</p>
   </div>
 </header>
 
@@ -86,8 +86,8 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Final Image</div>
+        <img src="https://i.imgur.com/SoIPQn3.jpg" alt="House" style="width:99%">
       </div>
     </div>
   </div>
@@ -95,9 +95,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.
+    <p>We are a moving dealership that offers furniture moving at a discount price! You are guarantted the cheapest move availabe. Avoid the hastle of contacting companies that will charge rediculous prices, give us a shot! Call us at 619-340-6281
     </p>
   </div>
 
