--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <img class="w3-image" src="https://i.imgur.com/MjJPHmc.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
-    <p class="w3-hide-small w3-text-light-grey" >We aren't the only one, but we are the best!</p>
+    <span class="w3-padding w3-black w3-opacity-min"><p class="w3-hide-small w3-text-light-grey" >We aren't the only ones, but we are the best!</p></span>
   </div>
 </header>
 
