--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
     <p>We are a moving dealership that offers furniture moving at a discount price! You are guarantted the cheapest move availabe. Avoid the hastle of contacting companies that will charge rediculous prices, give us a shot! Call us at 619-340-6281
     </p>
+    <br>
+    <p>
+      Al Nabil Service for moving furniture to and from El Cajon
+      We are not the only ones, but we are the Best.
+      Furniture transfer service inside and outside El Cajon, starting in El Cajon.
+      Furniture loading service is available with or without loading workers as desired.
+    </p>
   </div>
 
   
