--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
       Furniture transfer service inside and outside El Cajon, starting in El Cajon.
       Furniture loading service is available with or without loading workers as desired.
     </p>
+    <p>
+    Furniture transporting capacity 26 feet
+    Furniture load cart includes 2
+    Furniture lift is available
+    </p>
+
   </div>
 
   
@@ -122,7 +128,7 @@
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
+    <!-- <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
       <h3>Jane Doe</h3>
       <p class="w3-opacity">Architect</p>
@@ -142,7 +148,7 @@
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
+    </div> -->
   </div>
 <!--     <form action="/action_page.php" target="_blank">
       <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
