--- a/index.html
+++ b/index.html
@@ -103,12 +103,11 @@
       Furniture transfer service inside and outside El Cajon, starting in El Cajon.
       Furniture loading service is available with or without loading workers as desired.
     </p>
-    <p>
-    Furniture transporting capacity 26 feet
-    Furniture load cart includes 2
-    Furniture lift is available
-    </p>
-
+    <ul>
+      <li>Furniture transporting capacity 26 feet</li>
+      <li>Furniture load cart includes 2</li>
+      <li>Furniture lift is available</li>
+    </ul>  
   </div>
 
   
