--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <p>Lets get in touch and talk about your next project.</p>
 
 
-
+    <center>
     <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team2.jpg" alt="John" style="width:100%">
@@ -127,6 +127,7 @@
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
+    </center>
     <!-- <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
       <h3>Jane Doe</h3>
