--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="icon" href="https://i.imgur.com/e0Cv3c2.png">
+<link rel="icon" href="https://i.imgur.com/UjAymEf.jpg">
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -120,7 +120,8 @@
 
     
     <div class="w3-row-padding w3-grayscale">
-<!--     <div class="w3-col l3 m6 w3-margin-bottom">
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team2.jpg" alt="John" style="width:100%">
       <h3>John Doe</h3>
       <p class="w3-opacity">CEO & Founder</p>
@@ -128,13 +129,13 @@
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
 
-    <div class="w3-col l3 m6 w3-margin-bottom">
+    <!-- <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
       <h3>Jane Doe</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div> -->
+    </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
       <h3>Mike Ross</h3>
@@ -148,7 +149,7 @@
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
+    </div> -->
   </div>
   
 <!--     <form action="/action_page.php" target="_blank">
