--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="icon" href="https://i.imgur.com/UjAymEf.jpg">
+<link rel="icon" href="https://i.imgur.com/e0Cv3c2.png">
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -23,7 +23,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="https://i.imgur.com/MjJPHmc.jpg" alt="Architecture" width="1500" height="800">
+  <img class="w3-image" src="https://i.imgur.com/UjAymEf.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
     <p class="w3-medium w3-text-white" ><span class="w3-padding w3-black w3-opacity-min"><b>We aren't the only ones, but we are the best</b></span></p>
@@ -120,7 +120,6 @@
 
     
     <div class="w3-row-padding w3-grayscale">
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team2.jpg" alt="John" style="width:100%">
       <h3>John Doe</h3>
@@ -129,7 +128,7 @@
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
 
-    <!-- <div class="w3-col l3 m6 w3-margin-bottom">
+    <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
       <h3>Jane Doe</h3>
       <p class="w3-opacity">Architect</p>
@@ -149,7 +148,7 @@
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div> -->
+    </div>
   </div>
   
 <!--     <form action="/action_page.php" target="_blank">
