--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <h3>John Doe</h3>
       <p class="w3-opacity">CEO & Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+      <p><button class="w3-button w3-light-grey w3-block trigger_popup_fricc">Contact</button></p>
     </div>
 
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -149,7 +149,14 @@
       <h3>Dan Star</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+      <p><button class="w3-button w3-light-grey w3-block trigger_popup_fricc">Contact</button></p>
+    </div>
+    <div class="hover_bkgr_fricc">
+        <span class="helper"></span>
+        <div>
+            <div class="popupCloseButton">&times;</div>
+            <p>Contact me at 619 340 6281</p>
+        </div>
     </div>
   </div>
   
