--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <h3>John Doe</h3>
       <p class="w3-opacity">CEO & Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block trigger_popup_fricc">Contact</button></p>
+      <a class="trigger_popup_fricc"><p><button class="w3-button w3-light-grey w3-block">Contact</button></p></a>
     </div>
 
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -144,13 +144,13 @@
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div> -->
-    <div class="w3-col l3 m6 w3-margin-bottom">
+<!--     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
       <h3>Dan Star</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block trigger_popup_fricc">Contact</button></p>
-    </div>
+    </div> -->
     <div class="hover_bkgr_fricc">
         <span class="helper"></span>
         <div>
