--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
     <p>Lets get in touch and talk about your next project.</p>
 
 
-    
+    &emsp;&emsp;&emsp;&emsp;&emsp;
     <div class="w3-row-padding w3-grayscale">
+      &emsp;&emsp;&emsp;&emsp;
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="https://i.imgur.com/TLSe4tE.png" alt="Nabil" style="width:100%">
       <h3>John Doe</h3>
@@ -130,13 +131,13 @@
       <a class="trigger_popup_fricc"><p><button class="w3-button w3-light-grey w3-block">Contact</button></p></a>
     </div>
 
-    <div class="w3-col l3 m6 w3-margin-bottom">
+<!--     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
       <h3>Jane Doe</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
+    </div> -->
 <!--     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
       <h3>Mike Ross</h3>
