--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
       <h3>John Doe</h3>
       <p class="w3-opacity">CEO & Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <a class="trigger_popup_fricc"><p><button class="w3-button w3-light-grey w3-block">Contact</button></p></a>
+      <a class="trigger_popup_fricc"><button class="w3-button w3-light-grey w3-block">Contact</button></a>
+
+      <a class="trigger_popup_fricc">bruh </a>
     </div>
 
 <!--     <div class="w3-col l3 m6 w3-margin-bottom">
