--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
       <div class="form-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
     <h1>Contact me at 619 340 6281</h1>
+    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
   </form>
     </div>
       
