--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 
     
-    <div class="w3-row-padding w3-grayscale">
+    <div class="w3-row-padding w3-grayscale w3-center">
       
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="https://i.imgur.com/TLSe4tE.png" alt="Nabil" style="width:100%">
@@ -132,7 +132,7 @@
 
       <div class="form-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
-    <h1>Contact me at 619 340 6281</h1>
+    <h6>Contact me at 619 340 6281</h6>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
   </form>
     </div>
