--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <h3>Nabil Sulaiman</h3>
       <p class="w3-opacity">CEO & Founder</p>
       <p>Click below to view my contact information and schedule a moving apointment.</p>
-      <button class="w3-button w3-light-grey w3-block open-button" onclick="openForm()">Contact</button>
+      <button class="w3-button w3-light-grey w3-block " onclick="openForm()">Contact</button>
 
       <div class="form-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
