--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     <p>Lets get in touch and talk about your next project.</p>
 
 
-  <div class="w3-center">
-    <div class="w3-row-padding w3-grayscale ">
+
+    <div class="w3-center w3-grayscale ">
       
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="https://i.imgur.com/TLSe4tE.png" alt="Nabil" style="width:100%">
@@ -138,7 +138,7 @@
       </div>
       
     </div>
-  </div>
+
 
 <!--     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
