--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     <p>Lets get in touch and talk about your next project.</p>
 
 
-
-    <div class="w3-center w3-grayscale ">
+<center>
+    <div class=" w3-grayscale ">
       
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="https://i.imgur.com/TLSe4tE.png" alt="Nabil" style="width:100%">
@@ -162,6 +162,7 @@
       <p><button class="w3-button w3-light-grey w3-block trigger_popup_fricc">Contact</button></p>
     </div> -->
   </div>
+  <center>
   
 <!--     <form action="/action_page.php" target="_blank">
       <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
