--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 
 
-    <div class="w3-row-padding w3-grayscale ">
+    <div class="w3-row-padding w3-grayscale center">
       
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="https://i.imgur.com/TLSe4tE.png" alt="Nabil" style="width:100%">
