--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     </ul>  
   </div>
 
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSxpW1scg1GYLdx_bxU8mQsIy0jVFxHASKlGfPiKbk9ckV69sr6oHNYWImmHmZcARn64ukHamrTFMaX/pub?embedded=true"></iframe>
   
 
   <!-- Contact Section -->
