--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="https://i.imgur.com/UjAymEf.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Furniture Moving</span></h1>
     <p class="w3-medium w3-text-white" ><span class="w3-padding w3-black w3-opacity-min"><b>We aren't the only ones, but we are the best</b></span></p>
   </div>
 </header>
@@ -109,11 +109,10 @@
       <li>Furniture transporting capacity 26 feet</li>
       <li>Furniture load cart includes 2</li>
       <li>Furniture lift is available</li>
-      <li>خدمة النبيل لنقل الأثاث من والى الكاهون</li>
     </ul>  
   </div>
 
-  <iframe height="450px" width="1200px" src="https://docs.google.com/document/d/e/2PACX-1vSxpW1scg1GYLdx_bxU8mQsIy0jVFxHASKlGfPiKbk9ckV69sr6oHNYWImmHmZcARn64ukHamrTFMaX/pub?embedded=true"></iframe>
+  <iframe height="450px" width="400px" src="https://docs.google.com/document/d/e/2PACX-1vSxpW1scg1GYLdx_bxU8mQsIy0jVFxHASKlGfPiKbk9ckV69sr6oHNYWImmHmZcARn64ukHamrTFMaX/pub?embedded=true"></iframe>
   
 
   <!-- Contact Section -->
