--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <img class="w3-image" src="https://i.imgur.com/UjAymEf.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Furniture Moving</span></h1>
-    <p class="w3-medium w3-text-white" ><span class="w3-padding w3-black w3-opacity-min"><b>We aren't the only ones, but we are the best</b></span></p>
+    <p class="w3-medium w3-text-white" ><span class="w3-padding w3-black w3-opacity-min"><b>نحن لسنا الوحيدين ، لكننا الأفضل</b></span></p>
   </div>
 </header>
 
