--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>خدمة نقل أثاث في الكاهون</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="https://i.imgur.com/e0Cv3c2.png">
-
+<script data-ad-client="ca-pub-2448487556463282" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
 <body>
 
 <!-- Navbar (sit on top) -->
